add barang crud

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,12 +2,23 @@
 <html>
 <head lang="en">
     <title>Lite Inventory</title>
-    
+    <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
 </head>
 <body>
 
-<div class="container">
+<div class="container-fluid">
+    <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
     
+    <div class="row-fluid">
+    	<!--/*/ <th:block th:include="fragments/menu :: left-menu"></th:block> /*/-->
+    	
+    	<div class="span10">
+    		<h3>Home</h3>
+    	</div>
+    </div>
 </div>
+
+	<script src="http://code.jquery.com/jquery.js"></script>
+    <script src="/js/bootstrap.js"></script>
 </body>
 </html>
