rename object binding name

--- a/src/main/resources/templates/jenisbarangform.html
+++ b/src/main/resources/templates/jenisbarangform.html
@@ -14,7 +14,7 @@
     	<!--/*/ <th:block th:include="fragments/menu :: left-menu"></th:block> /*/-->
     	
     	<div class="span10">
-    		<form class="form-horizontal" th:object="${jenisbarang}" th:action="@{/jenisbarang}" method="post">
+    		<form class="form-horizontal" th:object="${kategoriBarang}" th:action="@{/jenisbarang}" method="post">
 			  <h3>Jenis Barang</h3>
 			  <div class="control-group">
 			    <label class="control-label" for="kdKategori">Kode</label>
