add daftar masuk form

--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -14,8 +14,8 @@
       <div class="span2">
         	<ul class="nav nav-list">
 			  <li class="nav-header">Home</li>
-			  <li><a href="/index"><i class="icon-home"></i> Home</a></li>
-			  <li><a href="#"><i class="icon-book"></i> Daftar Masuk</a></li>
+			  <li><a href="/"><i class="icon-home"></i> Home</a></li>
+			  <li><a href="/daftarmasuk"><i class="icon-book"></i> Daftar Masuk</a></li>
 			  <li><a href="#"><i class="icon-pencil"></i> Daftar Keluar</a></li>
 			  <li class="divider"></li>
 			  <li class="nav-header"> Laporan</li>
