--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,8 +3,10 @@
 
 <head lang="en">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" media="screen"/>
-    <link href="../../static/css/style.css" th:href="@{css/style.css}" rel="stylesheet" media="screen"/>
+    <link href="../../static/css/bootstrap-datepicker.min.css" th:href="@{/css/bootstrap-datepicker.min.css}" rel="stylesheet" media="screen"/>    
 </head>
 
 <body>
@@ -18,7 +20,7 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a class="brand" href="#">Lite Inventory</a>
+		      <a class="brand" href="/">Lite Inventory</a>
 		      <div class="nav-collapse collapse">
 		        <p class="navbar-text pull-right">
 		          Logged in as <a href="#" class="navbar-link">Username</a>
