--- a/src/main/resources/templates/barangform.html
+++ b/src/main/resources/templates/barangform.html
@@ -17,7 +17,7 @@
     		<form class="form-horizontal" th:object="${barang}" th:action="@{/barang}" method="post">
 			  <h3>Barang</h3>
 			  <div class="control-group">
-			    <label class="control-label" for="kdBarang">Kode</label>
+			    <label class="control-label" for="kdBarang">Kode Barang</label>
 			    <div class="controls">
 			    	<input type="text" maxLength="6" th:field="*{kdBarang}"/> 
 			    	<p class="text-error" th:if="${#fields.hasErrors('kdBarang')}" th:errors="*{kdBarang}">Error</p>			    				     
