--- a/src/main/resources/templates/daftarmasukform.html
+++ b/src/main/resources/templates/daftarmasukform.html
@@ -27,6 +27,7 @@
 			    	<div class="input-append date">
 			    		<input type="text" th:field="*{tanggal}" th:text="${#dates.format(daftarMasuk.tanggal, 'MM/dd/yyyy')}"/> 
 			    		<span class="add-on"><i class="icon-calendar"></i></span>
+			    		<p class="text-error" th:if="${#fields.hasErrors('tanggal')}" th:errors="*{tanggal}">Error</p>
 			    	</div>			    	 			    				    				    
 			    </div>
 			  </div>
