--- a/src/main/resources/templates/daftarmasukform.html
+++ b/src/main/resources/templates/daftarmasukform.html
@@ -19,16 +19,16 @@
     		<form class="form-horizontal" th:object="${daftarMasuk}" th:action="@{/daftarmasuk}" method="post">
     		  <input type="hidden" th:field="*{idMasuk}"/>
     		  <input type="hidden" th:field="*{idPerusahaan}"/>
-              <input type="hidden" th:field="*{serverDatetime}"/>
-            			  
+              <input type="hidden" th:field="*{serverDatetime}"/>                            
+              
 			  <div class="control-group">
 			    <label class="control-label" for="tanggal">Tanggal</label>
 			    <div class="controls">
 			    	<div class="input-append date">
 			    		<input type="text" th:field="*{tanggal}" th:text="${#dates.format(daftarMasuk.tanggal, 'MM/dd/yyyy')}"/> 
-			    		<span class="add-on"><i class="icon-calendar"></i></span>
-			    		<p class="text-error" th:if="${#fields.hasErrors('tanggal')}" th:errors="*{tanggal}">Error</p>
-			    	</div>			    	 			    				    				    
+			    		<span class="add-on"><i class="icon-calendar"></i></span>			    		
+			    	</div>
+			    	<p class="text-error" th:if="${#fields.hasErrors('tanggal')}" th:errors="*{tanggal}">Error</p>			    	 			    				    				    
 			    </div>
 			  </div>
 			  <div class="control-group">
@@ -54,7 +54,8 @@
 			  </div>			 		  
 			  <div class="control-group">
 			    <div class="controls">			          
-			      <button type="submit" class="btn btn-primary">Save</button>
+			      <button type="submit" class="btn btn-primary">Save</button>			     
+			      <a th:unless="${daftarMasuk.idMasuk == 0}" th:href="${'/daftarmasuk/' + daftarMasuk.idMasuk + '/detil'}" class="btn btn-link">Detil Barang</a>			    		     
 			    </div>
 			  </div>
 			</form>
