--- a/src/main/resources/templates/daftarmasukformdetil.html
+++ b/src/main/resources/templates/daftarmasukformdetil.html
@@ -15,7 +15,7 @@
     	
     	<div class="span10">
     		<form class="form-horizontal" th:object="${daftarMasukDetil}" th:action="@{/daftarmasukdetil}" method="post">
-    			<h3><a th:href="${'/daftarmasuk/edit/' + daftarMasukDetil.id.idMasuk}">Daftar Masuk</a> &gt; Barang</h3>
+    			<h3><a th:href="${'/daftarmasuk/edit/' + daftarMasukDetil.id.idMasuk}">Daftar Masuk</a> &gt; Detil Barang</h3>
 				<input type="hidden" th:field="*{id}"/>
 
 				<div class="control-group">
