--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -23,39 +23,16 @@
 		      <a class="brand" href="/">Lite Inventory</a>
 		      <div class="nav-collapse collapse">
 		        <p class="navbar-text pull-right">
-		          Logged in as <a href="#" class="navbar-link">Username</a>
+		          Logged in as <a href="#" class="navbar-link">Test User</a>
 		        </p>
 		        <ul class="nav">
-		          <li class="active"><a href="#">Home</a></li>
+		          <li class="active"><a href="#"><i class="icon-home"></i> Home</a></li>
 		          <li><a href="#about">About</a></li>
 		        </ul>
 		      </div>
 		    </div>
 		  </div>
-		</div>		    	
-	    
-        <!-- nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#" th:href="@{/}">Home</a>
-                    <ul class="nav navbar-nav">
-                        <li><a href="#" th:href="@{/products}">Products</a></li>
-                        <li><a href="#" th:href="@{/product/new}">Create new product</a></li>
-                    </ul>
-
-                </div>
-            </div>
-        </nav-->
-
-        <!--  div class="jumbotron">
-            <div class="row text-center">
-                <div class="">
-                    <h2>Lite Inventory</h2>
-                    <h3>Welcome</h3>
-                </div>
-            </div>           
-        </div> -->
-
+		</div>		    		          
     </div>
 
 </body>
