--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -11,22 +11,28 @@
 
     <div th:fragment="left-menu">    	
 
-      <div class="span2">
-        	<ul class="nav nav-list">
-			  <li class="nav-header">Home</li>
-			  <li><a href="/"><i class="icon-home"></i> Home</a></li>
-			  <li><a href="/daftarmasuk"><i class="icon-book"></i> Daftar Masuk</a></li>
-			  <li><a href="#"><i class="icon-pencil"></i> Daftar Keluar</a></li>
-			  <li class="divider"></li>
-			  <li class="nav-header"> Laporan</li>
-			  <li><a href="#"> FIFO Periodik</a></li>
-			  <li><a href="#"> Rekap</a></li>
-			  <li class="divider"></li>
-			  <li class="nav-header">Referensi</li>
-			  <li><a href="/barang"> Barang</a></li>
-			  <li><a href="#"> Kartu Barang</a></li>
-			  <li><a href="/jenisbarang"> Jenis Barang</a></li>
-			</ul>
+      <div class="span3">
+       	<ul class="nav nav-list">
+		  <li class="nav-header"> Home</li>			  
+		  <li><a href="/daftarmasuk"> Daftar Masuk</a></li>
+		  <li><a href="#"> Daftar Keluar</a></li>
+		  <li><a href="#"> RKB</a></li>
+		  <li><a href="#"> RKPB</a></li>
+		  
+		  <li class="divider"></li>
+		  
+		  <li class="nav-header"> Laporan</li>
+		  <li><a href="#"> FIFO Periodik</a></li>
+		  <li><a href="#"> Rekap</a></li>
+		  
+		  <li class="divider"></li>
+		  
+		  <li class="nav-header">Referensi</li>
+		  <li><a href="/barang"> Barang</a></li>
+		  <li><a href="#"> Kartu Barang (KB)</a></li>
+		  <li><a href="#"> Kartu Persediaan Barang (KPB)</a></li>
+		  <li><a href="/jenisbarang"> Jenis Barang</a></li>
+		</ul>
       </div>
 	      	 
 	</div>
