--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,8 +12,18 @@
     <div class="row-fluid">
     	<!--/*/ <th:block th:include="fragments/menu :: left-menu"></th:block> /*/-->
     	
-    	<div class="span10">
-    		<h3>Home</h3>
+    	<div class="span9">
+    		<h3>Home</h3>    		   
+	
+	        <!-- div class="jumbotron">
+	            <div class="row text-center">
+	                <div class="">
+	                    <h2>Lite Inventory</h2>
+	                    <h3>Welcome</h3>
+	                </div>
+	            </div>           
+	        </div> -->
+        
     	</div>
     </div>
 </div>
