implement bootstrap modal

--- a/src/main/resources/templates/daftarmasuk.html
+++ b/src/main/resources/templates/daftarmasuk.html
@@ -28,7 +28,7 @@
 				  	<strong>Error!</strong> Daftar Masuk is failed to be saved.
 				</div>
 				
-		        <table class="table table-striped">
+		        <table class="table table-hover table-condensed">
 		            <tr>               
 		            	<th>No.</th>
 		                <th>Tanggal</th>
