--- a/src/main/resources/templates/barang.html
+++ b/src/main/resources/templates/barang.html
@@ -19,16 +19,16 @@
     		
     		<div th:if="${not #lists.isEmpty(barangs)}">		       
 		        
-		        <div class="alert alert-success" th:if="${success_message != null}">
+		        <div id="success-alert" class="alert alert-success" th:if="${success_message != null}">
 				  	<button type="button" class="close" data-dismiss="alert">&times;</button>
 				  	<strong>Success!</strong> Barang has been saved successfully.
 				</div>				
-				<div class="alert alert-error" th:if="${error_message != null}">
+				<div id="error-alert" class="alert alert-error" th:if="${error_message != null}">
 				  	<button type="button" class="close" data-dismiss="alert">&times;</button>
 				  	<strong>Error!</strong> Barang is failed to be saved.
 				</div>
 				
-		        <table class="table table-striped">
+		        <table class="table table-hover table-condensed">
 		            <tr>
 		            	<th>No.</th>               
 		            	<th>Kode Barang</th>
@@ -44,21 +44,68 @@
 		            <tr th:each="barang, row : ${barangs}">
 		            	<td th:text="${row.index+1}">No.</td>
 		            	<td th:text="${barang.kdBarang}">Kode Barang</td>                
-		                <td th:text="${barang.nama}">Nama</td>
+		                <td id="namaBarang" th:text="${barang.nama}">Nama</td>
 		                <td th:text="${barang.jenisBarang}">Jenis</td>
 		                <td th:text="${barang.merk}">Merk</td>
 		                <td th:text="${barang.tipe}">Tipe</td>
 		                <td th:text="${barang.ukuran}">Ukuran</td>
 		                <td th:text="${barang.deskripsiSatuan}">Satuan</td>                            
-		                <td><a th:href="${'/barang/edit/' + barang.kdBarang}">Edit</a></td>
-		                <td><a th:href="${'/barang/delete/' + barang.kdBarang}">Delete</a></td>
+		                <td><a th:href="${'/barang/edit/' + barang.kdBarang}">Edit</a></td>		                
+		                <td><a id="deleteLink" href="#" th:value="${'/barang/delete/' + barang.kdBarang}" data-toggle="modal" data-target="#confirm-delete">Delete</a></td>
 		            </tr>
 		        </table>
 		
 		    </div>
+		    
+		    <div class="modal fade" id="confirm-delete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		        <div class="modal-dialog">
+		            <div class="modal-content">
+		            
+		                <div class="modal-header">
+		                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+		                    <h4 class="modal-title" id="myModalLabel">Confirm Delete</h4>
+		                </div>
+		            
+		                <div class="modal-body">
+		                    <p>Are You sure you want to delete the record?</p>
+		                    <div class="to-delete-data"></div>		                   		                    
+		                </div>
+		                
+		                <div class="modal-footer">
+		                    <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
+		                    <a class="btn btn-danger btn-ok" data-dismiss="modal">Yes</a>
+		                </div>
+		            </div>
+		        </div>
+		    </div>
+    
     	</div>
     </div>    
 </div>
 
+	<script src="http://code.jquery.com/jquery.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<script>
+        $('#confirm-delete').on('show.bs.modal', function(e) {        	
+            $('.to-delete-data').html('Nama Barang = <strong>' + document.getElementById('namaBarang').textContent + '</strong>');
+        });
+        
+        $('#confirm-delete').on('click', '.btn-ok', function(e) {        	
+            	var strUrl = document.getElementById('deleteLink').attributes[2].value;            
+            	$.ajax({url: strUrl, 
+            		type: 'POST',
+            		success: function(data){
+            			location.reload();
+            		}
+            	})
+            	                      
+        	}                	
+        );
+        
+        $("#success-alert").fadeTo(2000, 500).slideUp(500, function(){
+            $("#success-alert").slideUp(500);
+        });
+    </script>
+    
 </body>
 </html>
