--- a/src/main/resources/templates/daftarmasukdetil.html
+++ b/src/main/resources/templates/daftarmasukdetil.html
@@ -18,7 +18,7 @@
 			<p><a href="#" th:href="@{'/daftarmasuk/' + ${daftarMasukDetil.id.idMasuk} + '/detil/new'}">Add</a></p>
 
 			<div th:if="${not #lists.isEmpty(daftarMasukDetils)}">		       		        			       
-		        <table class="table table-striped">
+		        <table class="table table-hover table-condensed">
 		            <tr>
 		            	<th>No.</th>               
 		            	<th>Kode Barang</th>
