--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,8 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" media="screen"/>
-    <link href="../../static/css/bootstrap-datepicker.min.css" th:href="@{/css/bootstrap-datepicker.min.css}" rel="stylesheet" media="screen"/>    
+    <link href="../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" media="screen"/>
+    <link href="../css/bootstrap-datepicker.min.css" th:href="@{/css/bootstrap-datepicker.min.css}" rel="stylesheet" media="screen"/>    
 </head>
 
 <body>
