--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,7 +28,7 @@
     </div>
 </div>
 
-	<script src="http://code.jquery.com/jquery.js"></script>
+	<script src="http://code.jquery.com/jquery-2.0.3.js"></script>
     <script src="/js/bootstrap.js"></script>
 </body>
 </html>
