--- a/src/main/resources/templates/jenisbarang.html
+++ b/src/main/resources/templates/jenisbarang.html
@@ -19,7 +19,7 @@
     		
     		<div th:if="${not #lists.isEmpty(jenisbarangs)}">		        
 		        
-		        <table class="table table-striped">
+		        <table class="table table-hover table-condensed">
 		            <tr>
 		            	<th>No.</th>               
 		            	<th>Kode</th>
