--- a/src/main/resources/templates/daftarmasukform.html
+++ b/src/main/resources/templates/daftarmasukform.html
@@ -54,7 +54,7 @@
 			  </div>			 		  
 			  <div class="control-group">
 			    <div class="controls">			          
-			      <button type="submit" class="btn btn-primary">Save</button>			     
+			      <button type="submit" class="btn btn-primary">Simpan</button>			     
 			      <a th:unless="${daftarMasuk.idMasuk == 0}" th:href="${'/daftarmasuk/' + daftarMasuk.idMasuk + '/detil'}" class="btn btn-link">Detil Barang</a>			    		     
 			    </div>
 			  </div>
