--- a/src/main/resources/templates/jenisbarang.html
+++ b/src/main/resources/templates/jenisbarang.html
@@ -15,7 +15,7 @@
     	
     	<div class="span9">
     		<h3>Jenis Barang</h3>
-    		<p><a href="#" th:href="@{/jenisbarang/new}">Add</a></p>
+    		<p><a href="#" th:href="@{/jenisbarang/new}">Tambah</a></p>
     		
     		<div th:if="${not #lists.isEmpty(jenisbarangs)}">		        
 		        
@@ -24,22 +24,70 @@
 		            	<th>No.</th>               
 		            	<th>Kode</th>
 		                <th>Jenis Barang</th>              
-		                <th>Edit</th>
-		                <th>Delete</th>
+		                <th></th>
+		                <th></th>
 		            </tr>
 		            <tr th:each="jenis, row : ${jenisbarangs}">
 		            	<td th:text="${row.index+1}">No.</td> 
 		            	<td th:text="${jenis.kdKategori}">Kode</td>                
-		                <td th:text="${jenis.nama}">Jenis Barang</td>                            
-		                <td><a th:href="${'/jenisbarang/edit/' + jenis.kdKategori}">Edit</a></td>
-		                <td><a th:href="${'/jenisbarang/delete/' + jenis.kdKategori}">Delete</a></td>
+		                <td id="jenisBarang" th:text="${jenis.nama}">Jenis Barang</td>                            
+		                <td><a th:href="${'/jenisbarang/edit/' + jenis.kdKategori}">Ubah</a></td>
+		                <td><a id="deleteLink" href="#" th:value="${'/jenisbarang/delete/' + jenis.kdKategori}" data-toggle="modal" data-target="#confirm-delete">Hapus</a></td>
 		            </tr>
 		        </table>
 		
 		    </div>
+
+		    <div class="modal fade" id="confirm-delete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		        <div class="modal-dialog">
+		            <div class="modal-content">
+		            
+		                <div class="modal-header">
+		                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+		                    <h4 class="modal-title" id="myModalLabel">Pesan Konfirmasi</h4>
+		                </div>
+		            
+		                <div class="modal-body">
+		                    <p>Apakah Anda yakin akan menghapus data jenis barang?</p>
+		                    <div class="to-delete-data"></div>		                   		                    
+		                </div>
+		                
+		                <div class="modal-footer">
+		                    <button type="button" class="btn btn-default" data-dismiss="modal">Tidak</button>
+		                    <a class="btn btn-danger btn-ok" data-dismiss="modal">Ya</a>
+		                </div>
+		            </div>
+		        </div>
+		    </div>
     	</div>
     </div>    
 </div>
+
+	<script src="http://code.jquery.com/jquery.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<script>
+        $('#confirm-delete').on('show.bs.modal', function(e) {        	
+            $('.to-delete-data').html('Jenis Barang = <strong>' + document.getElementById('jenisBarang').textContent + '</strong>');
+        });
+        
+        $('#confirm-delete').on('click', '.btn-ok', function(e) {        	
+            	var strUrl = document.getElementById('deleteLink').attributes[2].value;            
+            	$.ajax({url: strUrl, 
+            		type: 'POST',
+            		success: function(data){
+            			location.reload();
+            		}
+            	})
+            	                      
+        	}                	
+        );
+        
+        window.setTimeout(function() {
+		    $(".alert").fadeTo(500, 0).slideUp(500, function(){
+		        $(this).remove(); 
+		    });
+		}, 4000);
+    </script>
 
 </body>
 </html>
