--- a/src/main/resources/templates/jenisbarangform.html
+++ b/src/main/resources/templates/jenisbarangform.html
@@ -31,7 +31,7 @@
 			  </div>			  
 			  <div class="control-group">
 			    <div class="controls">			          
-			      <button type="submit" class="btn btn-primary">Save</button>
+			      <button type="submit" class="btn btn-primary">Simpan</button>
 			    </div>
 			  </div>
 			</form>
